ajustes de acessibilidade

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="preload" href="./script.js" as="script">
+		<link rel="preload" href="./script.js" as="script" />
 		<link rel="stylesheet" href="./style.css" />
 		<title>Super Trunfo - World Team League 2021</title>
 	</head>
@@ -39,12 +39,14 @@
 								<div class="area-info">
 									<div class="area-detalhes">
 										<div class="div-detalhes">
-											<h4>Time:</h4>
-											<p class="time">Team</p>
+											<p class="titulo-detalhes">
+												Time: <span class="time"></span>
+											</p>
 										</div>
 										<div class="div-detalhes">
-											<h4>Raça:</h4>
-											<p class="raca"></p>
+											<p class="titulo-detalhes">
+												Raça: <span class="raca"></span>
+											</p>
 										</div>
 									</div>
 									<div class="area-jogo">
@@ -69,12 +71,14 @@
 								<div class="area-info">
 									<div class="area-detalhes">
 										<div class="div-detalhes">
-											<h4>Time:</h4>
-											<p class="time time-maq">Team</p>
+											<p class="titulo-detalhes">
+												Time: <span class="time time-maq"></span>
+											</p>
 										</div>
 										<div class="div-detalhes">
-											<h4>Raça:</h4>
-											<p class="raca raca-maq"></p>
+											<p class="titulo-detalhes">
+												Raça: <span class="raca raca-maq"></span>
+											</p>
 										</div>
 									</div>
 									<div class="area-jogo">
