texto area-detalhes ajustado

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			<form id="form">
 				<h2>Escolha o seu atributo</h2>
 				<div class="wrapper">
-					<div class="placar"></div>
+					<div class="area-placar">Placar: <span class="placar"></span></div>
 					<div class="quantidade-cartas">
 						<div class="cartas-jogador"></div>
 						<div class="cartas-maquina"></div>
