Mudança na posição do botão jogar

--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
 				alt="Logo Imersão Dev da Alura"
 			/>
 			<h1 class="page-title">Super Trunfo - World Team League 2021</h1>
-			<button onclick="sortearCarta()" id="btnSortear">Sortear carta</button>
+
 			<form id="form">
 				<h2>Escolha o seu atributo</h2>
 				<div class="wrapper">
-					<div class="area-placar">Placar: <span class="placar"></span></div>
+					<div class="area-placar">
+						Placar: <span class="placar"></span>
+					</div>
 					<div class="quantidade-cartas">
 						<div class="cartas-jogador"></div>
 						<div class="cartas-maquina"></div>
@@ -94,6 +96,9 @@
 						</div>
 					</div>
 				</div>
+				<button onclick="sortearCarta()" id="btnSortear">
+					Sortear carta
+				</button>
 				<button
 					class="button-jogar"
 					type="button"
